[package]
name = "rustbox"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cli"
path = "src/main.rs"

[[bin]]
name = "demo"
path = "src/demo.rs"

[[bin]]
name = "demo2"
path = "src/demo2.rs"

[dependencies]
# global-hotkey = "0.7.0"
# xcap = "0.6.2"
# fs_extra = "1.3.0"
# libwayshot = "0.3.0"
# proc-macro2 = "1.0"
# rstml = "0.12.1"
# leptos_hot_reload = "0.8.2"
# syn = "2.0"   
# quote = "1.0" 
# indexmap = "2.10"
# subsecond = { version = "0.7.0-alpha.3", path = "../dioxus/packages/subsecond/subsecond" }
subsecond = { version = "0.7.0-alpha.3" }
dioxus-devtools = { version = "0.7.0-alpha.3" }
# dioxus-devtools = { version = "0.7.0-alpha.3", path = "../dioxus/packages/devtools" }
clap = { version = "4.5.41", features = ["derive"] }
anyhow = "1.0"
itertools = "0.14"
object = { version = "0.37", features = ["all"] }
tracing = "0.1.41"
rayon = "1.10"
subsecond-types = "0.7.0-alpha.3"
thiserror = "2.0"
target-lexicon = { version = "0.13", features = ["serde", "serde_support"] }
pdb = "0.8"
log = { version = "0.4", features = ["max_level_off", "release_max_level_off"] }
walrus = { version = "0.23.3", features = ["parallel"] }
wasmparser = "0.235"
# websocket = { version = "0.27.1", features = ["sync"], default-features = false }
tungstenite = "0.27"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.20"
uuid = { version = "1.17", features = ["v5"] }
ar = "0.9.0"
