[package]
name = "leptos-subsecond-cli-temp"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus-devtools = { version = "0.7.0-alpha.3" }
clap = { version = "4.5.41", features = ["derive"] }
anyhow = "1.0"
itertools = "0.14"
object = { version = "0.37", features = ["all"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rayon = "1.10"
subsecond-types = "0.7.0-alpha.3"
thiserror = "2.0"
target-lexicon = { version = "0.13", features = ["serde", "serde_support"] }
pdb = "0.8"
log = { version = "0.4", features = ["max_level_off", "release_max_level_off"] }
walrus = { version = "0.23.3", features = ["parallel"] }
wasmparser = "0.235"
tungstenite = "0.27"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.20"
uuid = { version = "1.17", features = ["v5"] }
ar = "0.9.0"
wasm-bindgen-cli-support = "0.2.100"
multiqueue = "0.3.2"
